--- a/web/app/themes/cnh/assets/styles/layouts/_posts.scss
+++ b/web/app/themes/cnh/assets/styles/layouts/_posts.scss
@@ -17,7 +17,7 @@
 
     .header-content {
       background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,1));
+      padding-bottom: 15px;
     }
-
   }
 }
